--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body{
-    background-color: aquamarine;
+    background-color: brown;
     text-align: center;
     font-style: italic;
+    font-size: 30px;
 }
 strong{
     text-decoration: blue;
