--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,10 @@ h1{
     color: blue;
 }
 ol{
-    color: blue;
+    color: blue
 }
 p {
-    color: black;
+    color:white;
     font-style: italic;
 }
 h2 {
